src/test/ui/consts/miri_unleashed/mutable_references.stderr
warning: skipping const checks
  --> $DIR/mutable_references.rs:9:26
   |
LL | static FOO: &&mut u32 = &&mut 42;
   |                          ^^^^^^^

warning: skipping const checks
  --> $DIR/mutable_references.rs:14:23
   |
LL | static BAR: &mut () = &mut ();
   |                       ^^^^^^^

warning: skipping const checks
  --> $DIR/mutable_references.rs:20:28
   |
LL | static BOO: &mut Foo<()> = &mut Foo(());
   |                            ^^^^^^^^^^^^

warning: skipping const checks
  --> $DIR/mutable_references.rs:30:8
   |
LL |     x: &UnsafeCell::new(42),
   |        ^^^^^^^^^^^^^^^^^^^^

warning: skipping const checks
  --> $DIR/mutable_references.rs:35:27
   |
LL | static OH_YES: &mut i32 = &mut 42;
   |                           ^^^^^^^

error[E0594]: cannot assign to `*OH_YES`, as `OH_YES` is an immutable static item
  --> $DIR/mutable_references.rs:42:5
   |
LL |     *OH_YES = 99;
   |     ^^^^^^^^^^^^ cannot assign

error: aborting due to previous error; 5 warnings emitted

For more information about this error, try `rustc --explain E0594`.
